# lz4-conduit

./: LICENSE  Main.hs  README.md  lz4-conduit.cabal  stack.yaml
Data/Conduit/: LZ4.hsc
Main/: LZ4.hs  Test.hs
